# sat-ground-control

./: Dockerfile  Makefile  ccsds_parser.py  docker-compose.yml  ground_commander.py  ingestion.py  pyproject.toml  satellite.py  xtce_parser.py
common/: clcw.py  telemetry_def.xml  xtce_parser.py
flight/: farm.py  satellite.py  simulation.py
ground/: api.py  dependencies.py  ground_commander.py  ingestion.py  models.py  schemas.py  sequence_detector.py  telemetry_service.py
ground/api/: api.py  dependencies.py  ground_commander.py  redis_client.py  schemas.py  telemetry_repository.py  telemetry_service.py  timescale_client.py
ground/domain/: enums.py  models.py
ground/ingestion/: db_clients.py  fop_service.py  ingestion.py  ingestion_repository.py  ingestion_service.py  ingestion_settings.py  pass_service.py  sequence_detector.py
infrastructure/grafana/dashboards/: Loss Events-1771698940500.json  Satellite-1771698960373.json
infrastructure/grafana/provisioning/dashboards/: dashboards.yml
infrastructure/grafana/provisioning/datasources/: postgres.yml
infrastructure/postgres/init/: 00-init.sql
