[project]
name = "sat-ground-control"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.128.4",
    "psycopg2>=2.9.11",
    "pydantic-settings>=2.12.0",
    "redis>=7.1.0",
    "skyfield>=1.54",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]
