[project]
name = "sat-ground-control"
version = "0.1.0"
description = "A simple simulation of a satellite and a ground control system consuming telemetry data"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.129.0",
    "psycopg2>=2.9.11",
    "pydantic-settings>=2.13.1",
    "redis>=7.2.0",
    "skyfield>=1.54",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.41.0",
]
